--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -77,7 +77,7 @@ The results for Neue Pinakothek and Sammlung Schack are summarized below. Differ
 
 ## Results
 
-Taken together, the two collections contain 2,475 canvas paintings, which makes up 71% of the total number of paintings ([fig. 32.3a](#fig-32-3)).
+Taken together, the two collections contain 2,475 canvas paintings, which make up 71% of the total number of paintings ([fig. 32.3a](#fig-32-3)).
 
 {% figure 'fig-32-3' %}
 
