--- a/content/8-posters/41.md
+++ b/content/8-posters/41.md
@@ -9,26 +9,26 @@ contributor:
   - first_name: "Lauren"
     last_name: "Bradley"
     title: "Associate Paintings Conservator"
-    affiliation: "Brooklyn Museum"
+    affiliation: "Brooklyn Museum, New York"
     sort_as: "1"
   - first_name: "Josh"
     last_name: "Summer"
     title: "Louise B. and J. Harwood Cochrane Assistant Conservator of Paintings"
-    affiliation: "Virginia Museum of Fine Arts"
+    affiliation: "Virginia Museum of Fine Arts, Richmond"
     sort_as: "2"
 keywords:
-abstract: "This short article compiles preliminary findings from an ongoing survey of wax-resin lining treatments performed at Brooklyn Museum (BkM) from 1936 through 1985. BkM’s Conservation Department was established in 1934 with the hire of Sheldon Keck and is among the oldest in the United States. BkM holds both the paintings and the associated conservation records for a wide range of canvases treated by Keck, his wife Caroline, and their protégés; researching this collection has the potential to reveal much about the broader twentieth-century American lining movement. It is estimated that 20%–25% of the canvas paintings in BkM’s collection have been wax-resin lined. Lining trends identified within the collection, reasons for lining, and adhesive recipes used at BkM are discussed. Initial survey results challenged some of the authors' preconceptions about historic lining practices at the museum. At the time of publication, nearly half of the conservation files had been evaluated."
+abstract: "This short article compiles preliminary findings from an ongoing survey of wax-resin lining treatments performed at Brooklyn Museum (BkM) from 1936 through 1985. BkM’s Conservation Department was established in 1934 with the hire of Sheldon Keck and is among the oldest in the United States. BkM holds both the paintings and the associated conservation records for a wide range of canvases treated by Keck, his wife, Caroline, and their protégés; researching this collection has the potential to reveal much about the broader twentieth-century lining movement in the United States. It is estimated that 20%–25% of the canvas paintings in BkM’s collection have been wax-resin lined. Lining trends identified within the collection, reasons for lining, and adhesive recipes used at BkM are discussed. Initial survey results challenged some of the authors' preconceptions about historical lining practices at the museum. At the time of publication, nearly half of the conservation files had been evaluated."
 ---
 
 ## Introduction
 
-Motivated by an interest in past treatment techniques and a desire to put current Brooklyn Museum (BkM) projects into an historic context, BkM Conservators are endeavoring to build an internal database of wax-resin linings through a comprehensive survey of the paintings collection. Using both the conservation records and the paintings themselves, the project aims to reconstruct the history of wax-resin lining practices at BkM. The authors not only seek to identify trends in lining application but also to evaluate the decision-making process behind individual treatments and to assess how they have aged. Because lining materials and techniques have implications for collection care, another goal is to develop a framework that will enable the adhesive recipe to be characterized if only the conservator or date of execution is known, aiding in the establishment of markers for paintings that may warrant condition monitoring. This poster presents an overview of the project and considers preliminary findings from the ongoing survey.
+Motivated by an interest in past treatment techniques and a desire to put current Brooklyn Museum (BkM) projects into a historical context, BkM conservators are endeavoring to build an internal database of wax-resin linings through a comprehensive survey of the paintings collection. Using both the conservation records and the paintings themselves, the project aims to reconstruct the history of wax-resin lining practices at BkM. The authors seek not only to identify trends in lining application but also to evaluate the decision-making process behind individual treatments and to assess how they have aged. Because lining materials and techniques have implications for collection care, another goal is to develop a framework that will enable the adhesive recipe to be characterized if only the conservator or date of execution is known, aiding in the establishment of markers for paintings that may warrant condition monitoring. This poster presents an overview of the project and considers preliminary findings from the ongoing survey.
 
 ## History
 
-Founded in 1934 with the hire of Sheldon Keck as restorer, the BkM Conservation Department is among the oldest in the United States and was the first established within a New York City institution. The department, which has continuously employed a paintings conservator, holds documentation for a wide range of canvases treated by Keck, his wife, Caroline, who was also an accomplished conservator, and their successors. Researching the BkM conservation records together with the associated paintings has the potential to reveal a great deal about both the approaches to wax-resin lining at the museum and the broader twentieth-century American lining movement.
+Founded in 1934 with the hire of Sheldon Keck as restorer, the BkM Conservation Department is among the oldest in the United States and was the first established within a New York City institution. The department, which has continuously employed a paintings conservator, holds documentation for a wide range of canvases treated by Keck, his wife, Caroline, who was also an accomplished conservator, and their successors. Researching the BkM conservation records together with the associated paintings has the potential to reveal a great deal about both the approaches to wax-resin lining at the museum and the broader twentieth-century lining movement in the United States.
 
-Documentation has been integral to conservation practice at BkM since the beginning. Although reports have become more nuanced over time, many early records were abbreviated, rarely elaborating on the treatment rationale or describing the materials and techniques in a way that would allow the processes to be reproduced. Often reports were unsigned, recipe components were not itemized or quantified, and procedures were summarized using undefined terms (such as “the Dutch method” for lining preparations). With a few notable exceptions, this lack of detail presents challenges in understanding the relationship between current condition issues and previous treatments.
+Documentation has been integral to conservation practice at BkM since the department's beginning. Although reports have become more nuanced over time, many early records were abbreviated, rarely elaborating on the treatment rationale or describing the materials and techniques in a way that would allow the processes to be reproduced. Often reports were unsigned, recipe components were not itemized or quantified, and procedures were summarized using undefined terms (such as “the Dutch method” for lining preparations). With a few notable exceptions, this lack of detail presents challenges in understanding the relationship between current condition issues and previous treatments.
 
 Archival research has provided valuable insights into BkM treatment methods absent in the documentation. In 1954 and 1962, Sheldon and Caroline produced two films for a general audience, both of which illustrate the complex operation of performing a wax-resin lining. The earlier film features a lining executed with a hand iron ([fig. 41.1](#fig-41-1)) ({% cite 'Keck and Keck 1954' %}), and in the later one, conservators demonstrate the use of a vacuum hot table ([fig. 41.2](#fig-41-2)) ({% cite 'Keck and Keck 1962' %}). In both films, the narration illuminates the reasoning behind each action and material selected. The filmed processes are remarkably consistent with physical evidence of lining observed on many paintings in the collection, such as paper residues on the tacking margins or brush marks and fingerprints on the versos of paintings lined by hand.
 
@@ -42,9 +42,9 @@ BkM conservation records are kept as paper files and digital assets on The Museu
 
 ## Preliminary Findings
 
-Wax-resin linings were performed at BkM over a nearly fifty-year period from 1936 through the mid-1980s, encompassing the rise and fall of the technique’s popularity in the United States. Based on the records reviewed to date, the authors hypothesize that 20%–25% of the canvas paintings in the BkM collection are wax-resin lined. The earliest linings were primarily done on paintings that had been in the collection for decades. The institution, with roots dating back to 1823, had been collecting paintings for nearly a hundred years before employing a conservator. In his first years on the job, Keck may have encountered a backlog of paintings in unstable condition that he judged to be in need of lining. The data appears to suggest that, starting in the 1940s, many paintings were lined as they were acquired. This trend is consistent with the developing role of the conservator within the museum. Annual reports from 1938 onward emphasize the practice of examining all artwork considered for acquisition “to make sure of their good condition and authenticity” ({% cite 'Brooklyn Museum 1940' '23' %}).
+Wax-resin linings were performed at BkM over a nearly fifty-year period from 1936 through the mid-1980s, encompassing the rise and fall of the technique’s popularity in the United States. Based on the records reviewed to date, the authors hypothesize that 20%–25% of the canvas paintings in the BkM collection are wax-resin lined. The earliest linings were primarily done on paintings that had been in the collection for decades. The institution, with roots dating back to 1823, had been collecting paintings for nearly a hundred years before employing a conservator. In his first years on the job, Keck may have encountered a backlog of paintings in unstable condition that he judged to be in need of lining. The data appear to suggest that, starting in the 1940s, many paintings were lined as they were acquired. This trend is consistent with the developing role of the conservator within the museum. Annual reports from 1938 onward emphasize the practice of examining all artwork considered for acquisition “to make sure of their good condition and authenticity” ({% cite 'Brooklyn Museum 1940' '23' %}).
 
-Most of the paintings wax-resin lined at BkM were between fifty and 125 years old at the time of lining ([fig. 41.3](#fig-41-3)), including paintings from the early nineteenth century through the 1930s. Few paintings predating the nineteenth century were lined at BkM, which likely reflects the strength of BkM collection holdings in certain areas.
+Most of the paintings wax-resin lined at BkM were between 50 and 125 years old at the time of lining ([fig. 41.3](#fig-41-3)), including paintings from the early nineteenth century through the 1930s. Few paintings predating the nineteenth century were lined at BkM, which likely reflects the strength of BkM collection holdings in certain areas.
 
 {% figure 'fig-41-3' %}
 
@@ -54,9 +54,9 @@ Fluctuations in the number of linings performed each year may correspond with si
 
 Some variations in lining frequency may be linked to new technology, such as the vacuum hot table acquired in 1961, and/or staffing changes that occurred in the department over the decades. The apparent increase in numbers observed in the late 1970s and early 1980s warrants further investigation, considering the critical attitudes against lining that developed in the field of conservation at this time.
 
-The most common motivations given for lining include a “cupped” or “cracked” paint film; a “dry,” “brittle,” or “slack” canvas; and the failure of an old glue-paste lining. Significantly, not all paintings called to the laboratory were lined as a matter of course; many underwent less invasive treatments or were left untouched. This was sometimes attributed to lack of time, but also occurred if it was determined that no intervention was required, particularly in cases where a stable lining was already present.
+The most common motivations given for lining include a “cupped” or “cracked” paint film; a “dry,” “brittle,” or “slack” canvas; and the failure of an old glue-paste lining. Significantly, not all paintings called to the laboratory were lined as a matter of course; many underwent less-invasive treatments or were left untouched. This was sometimes attributed to lack of time, but also occurred if it was determined that no intervention was required, particularly in cases where a stable lining was already present.
 
-There were significant periods when adhesive components were not listed each time a lining was performed ([fig. 41.5](#fig-41-5)). The earliest reports, dated 1936–1940, reliably include the same formula of 60 parts beeswax, 35 parts dammar resin, and 5 parts Canada balsam. In 1941, the terms *wax-resin* or *wax* were used alone, without specifying components. Reports from 1942–1944 contain a similar recipe to the earlier one, with slightly different proportions: 65 parts beeswax, 30 parts dammar resin, and 5 parts Canada balsam. The term *wax-resin* predominates again from 1945 to 1946, and from 1961 onward. These trends indicate that generic language was common once the same formula had been used for a while, with little variation.
+There were significant periods when adhesive components were not listed each time a lining was performed ([fig. 41.5](#fig-41-5)). The earliest reports, dated 1936–40, reliably include the same formula of 60 parts beeswax, 35 parts dammar resin, and 5 parts Canada balsam. In 1941, the terms *wax resin* and *wax* were used alone, without specifying components. Reports from 1942–44 contain a similar recipe to the earlier one, with slightly different proportions: 65 parts beeswax, 30 parts dammar resin, and 5 parts Canada balsam. The term *wax resin* predominates again from 1945 to 1946, and from 1961 onward. These trends indicate that generic language was common once the same formula had been used for a while, with little variation.
 
 {% figure 'fig-41-5' %}
 
@@ -66,15 +66,15 @@ The majority (approximately 80%) of the linings assessed to date remain stable a
 
 ## Conclusions and Future Steps
 
-Preliminary findings challenged preconceptions about historic BkM lining practices. Prior to starting this project, the authors assumed a majority of canvas paintings at BkM were wax-resin lined and that paintings routinely underwent lining treatments as a preventive measure, regardless of their condition. The survey has revealed what seems to be a more discerning and varied approach. Decisions over whether or not to line a painting appear to have been carefully weighed, even if the rationale was not described.
+Preliminary findings challenged preconceptions about historical BkM lining practices. Prior to starting this project, the authors assumed a majority of canvas paintings at BkM were wax-resin lined and that paintings routinely underwent lining treatments as a preventive measure regardless of their condition. The survey has revealed what seems to be a more discerning and varied approach. Decisions over whether or not to line a painting appear to have been carefully weighed, even if the rationale was not described.
 
-Upon completion of the survey, the influence of BkM collecting and exhibition practices on lining treatments will be evaluated. Further consideration will be given to age at the time of lining to determine if the treatment approach differed between newer paintings and those that had been through the restoration cycle many times. Data regarding the replacement or reuse of auxiliary supports and the method of canvas attachment is also being gathered with the intent to link individual conservators with idiosyncratic techniques.
+Upon completion of the survey, the influence of BkM collecting and exhibition practices on lining treatments will be evaluated. Further consideration will be given to age at the time of lining to determine if the treatment approach differed between newer paintings and those that had been through the restoration cycle many times. Data regarding the replacement or reuse of auxiliary supports and the method of canvas attachment are also being gathered with the intent to link individual conservators with idiosyncratic techniques.
 
 The authors hope to inspire similar studies of wax-resin lined paintings in other collections, creating the potential to trace the exchange of lining materials and techniques across laboratories.
 
 ## Acknowledgments
 
-We wish to thank the many people who contributed to this project, including Maribel Vitagliani, Scott Aaronson, Lisa Bruno, Jessica Ford, Terri O’Hara, Elaine Miller, Ellen Nigro, Victoria Schussler, and Molly Seegers, in addition to acknowledging The Getty Foundation and The Andrew W. Mellon Foundation for funding support.
+We wish to thank the many people who contributed to this project, including Maribel Vitagliani, Scott Aaronson, Lisa Bruno, Jessica Ford, Terri O’Hara, Elaine Miller, Ellen Nigro, Victoria Schussler, and Molly Seegers, in addition to acknowledging the Getty Foundation and the Andrew W. Mellon Foundation for funding support.
 
 {% backmatter %}
 
@@ -82,10 +82,10 @@ We wish to thank the many people who contributed to this project, including Mari
 
 {% endbackmatter %}
 
-[^1]: 1936 is the date of the earliest lining encountered in the records thus far.
+[^1]: The date of the earliest lining encountered in the records thus far is 1936.
 
-[^2]: Treatment report for Bertram Hartmen, *Trinity Church and Wall Street* (30.1109), February 26, 1952, Brooklyn Museum Conservation Department Records, Brooklyn, NY.
+[^2]: Treatment report for Bertram Hartmen, *Trinity Church and Wall Street* (30.1109), February 26, 1952, Brooklyn Museum Conservation Department Records, Brooklyn, New York.
 
-[^3]: Treatment report for Cuzco School, *The Legend of Santa Sophronia* (48.206.88), 1971 and 1972, Brooklyn Museum Conservation Department Records, Brooklyn, NY.
+[^3]: Treatment report for Cuzco School, *The Legend of Santa Sophronia* (48.206.88), 1971 and 1972, Brooklyn Museum Conservation Department Records, Brooklyn, New York.
 
-[^4]: Treatment report for William Hart, *Near Hurley, Ulster County, New York* (15.333), August 1972, Brooklyn Museum Conservation Department Records, Brooklyn, NY.
+[^4]: Treatment report for William Hart, *Near Hurley, Ulster County, New York* (15.333), August 1972, Brooklyn Museum Conservation Department Records, Brooklyn, New York.
