--- a/content/8-posters/43.md
+++ b/content/8-posters/43.md
@@ -10,26 +10,26 @@ contributor:
     title: "Graduate Student"
     affiliation: "Conservation Center of the Institute of Fine Arts, New York University"
 keywords:
-abstract: "During treatment of Francesco Bassano’s *Adoration of the Shepherds* (Arkansas Arts Center), the painting was found to have been lined to a very open-weave canvas using glue-paste adhesive. Further research revealed this to be an Italian lining technique, likely applied before the painting’s acquisition by the Kress Foundation in the 1930s. This poster explores the differences between Florentine and Roman lining techniques, proposing that the lining applied to the Bassano is Roman. It also provides an overview of the Roman lining method, and ultimately identifies the type of canvas used on the Bassano."
+abstract: "During treatment of Francesco Bassano’s *Adoration of the Shepherds* (Arkansas Arts Center), the painting was found to have been lined to a very open-weave canvas using glue-paste adhesive. Further research revealed this to be an Italian lining technique, likely applied before the painting’s acquisition by the Kress Foundation in the 1930s. This poster explores the differences between Florentine and Roman lining techniques, proposing that the lining applied to the Bassano is Roman. It also provides an overview of the Roman lining method and ultimately identifies the type of canvas used on the Bassano."
 ---
 
 ## Introduction
 
-In the fall of 2018, the Arkansas Arts Center’s *Adoration of the Shepherds,* attributed to Francesco Bassano ([fig. 43.1](#fig-43-1)), was brought to New York University’s Conservation Center for treatment. The painting is part of the dispersed Kress Collection, and had not been studied since 1932, when it was restored by then-conservator of the Kress Collection, Stephen Pichetto.[^1] During treatment at the Conservation Center, it was revealed the painting had been lined with a very open-weave canvas ([fig. 43.2](#fig-43-2)). This was an unusual discovery, as canvas paintings treated by the Kress Foundation during this period were often lined after acquisition with tightly woven canvases.[^2] Additionally, there were no notes in the Kress Foundation Archive that discussed the addition of a lining. So where was it applied?
+In the fall of 2018, the Arkansas Arts Center’s *Adoration of the Shepherds*, attributed to Francesco Bassano ([fig. 43.1](#fig-43-1)), was brought to New York University’s Conservation Center for treatment. The painting is part of the dispersed Kress Collection and had not been studied since 1932, when it was restored by then-conservator of the Kress Collection, Stephen Pichetto.[^1] During treatment at the Conservation Center, it was revealed that the painting had been lined with a very open-weave canvas ([fig. 43.2](#fig-43-2)). This was an unusual discovery, as canvas paintings treated by the Kress Foundation during this period were often lined after acquisition with tightly woven canvases.[^2] Additionally, there were no notes in the Kress Foundation Archive that discussed the addition of a lining. So where was it applied?
 
 {% figure 'fig-43-1' %}
 
 {% figure 'fig-43-2' %}
 
-The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 x 30 threads per inch, the lining has a very open, plain weave with approximately 16 x 16 threads per inch. The canvas is composed of threads with irregular widths, and the lining overall was adhered with a thin layer of glue-paste adhesive ([fig. 43.3](#fig-43-3)). Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ({% cite 'Shapley 1973' %}). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
+The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 × 30 threads per inch, the lining has a very open, plain weave with approximately 16 × 16 threads per inch. The canvas is composed of threads with irregular widths ([fig. 43.3](#fig-43-3)), and the lining overall was adhered with a thin layer of glue-paste adhesive. Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ({% cite 'Shapley 1973' %}). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
 
 {% figure 'fig-43-3' %}
 
 ## Roman versus Florentine Lining Canvases
 
-In Italy, there are two traditional glue-paste lining methods: Florentine and Roman. This distinction originates from the work of two nineteenth-century Italian restorers: Count Giovanni Secco-Suardo and Ulisse Forni. The glue-paste recipe and lining techniques advocated by Secco-Suardo informed the Florentine technique, whereas Forni’s became the basis for the Roman technique ({% cite 'Forni 1866' %}; {% cite 'Reifsnyder 1995' '77–78' %}).[^3] A characteristic difference often cited between these approaches is the glue-paste recipes;[^4] however, there is also a large variation in the types of lining canvas chosen. While both methods generally employ plain weave hemp and/or flax-based canvases, their weave densities differ greatly.
+In Italy, there are two traditional glue-paste lining methods: Florentine and Roman. This distinction originates from the work of two nineteenth-century Italian restorers, Count Giovanni Secco-Suardo and Ulisse Forni. The glue-paste recipe and lining techniques advocated by Secco-Suardo informed the Florentine technique, whereas Forni’s became the basis for the Roman technique ({% cite 'Forni 1866' %}; {% cite 'Reifsnyder 1995' '77–78' %}).[^3] A characteristic difference often cited between these approaches is the glue-paste recipes;[^4] however, there is also a large variation in the types of lining canvas chosen. While both methods generally employ plain weave hemp and/or flax-based canvases, their weave densities differ greatly.
 
-Typically, the Florentine method uses a tighter weave, similar to the original canvas, though slightly more robust, to support the painting ({% cite 'Reifsnyder 1995' '79' %}).[^5] This type of canvas is chosen to provide a more rigid support and minimize weave interference ({% cite 'Baldini and Taiti 2003' '116' %}). The Roman technique, in contrast, uses an open weave. There are two main types of this open-weave canvas: the more open *tela patta,* at 10–15 threads per inch, and the slightly more dense *tela pattina,* at 20–25 threads per inch. Selection of either the *tela patta* or *tela pattina* largely depends on the size of the painting, the structure of the original canvas, and the painting’s condition ({% cite 'Laroche and Saccarello 1996' '13' %}). Generally, this type of canvas allows for a lighter, more flexible support after lining; however, the overall flexibility is also highly dependent on the glue-paste recipe ({% cite 'Lavorini 2007' %}).[^6]
+Typically, the Florentine method uses a tighter weave similar to that of the original canvas, though slightly more robust, to support the painting ({% cite 'Reifsnyder 1995' '79' %}).[^5] This type of canvas is chosen to provide a more rigid support and minimize weave interference ({% cite 'Baldini and Taiti 2003' '116' %}). The Roman technique, in contrast, uses an open weave. There are two main types of this open-weave canvas: the more open *tela patta*, at 10–15 threads per inch, and the slightly more dense *tela pattina*, at 20–25 threads per inch. Selection of either the *tela patta* or *tela pattina* largely depends on the size of the painting, the structure of the original canvas, and the painting’s condition ({% cite 'Laroche and Saccarello 1996' '13' %}). Generally, this type of canvas allows for a lighter, more flexible support after lining; however, the overall flexibility is also highly dependent on the glue-paste recipe ({% cite 'Lavorini 2007' %}).[^6]
 
 ## Brief Overview of the Traditional Roman Lining Process
 
@@ -39,13 +39,13 @@ The following outlines the steps of the Roman lining process.
 
 2.  Diluted *colletta* (glue) is applied to the back of the original canvas to consolidate preparatory layers before the lining procedure.
 
-    -   The *colletta* is often composed of hide glue, water, white vinegar, molasses, and ox gall, and sometimes a small amount of fungicide.
+    -   The *colletta* is often composed of hide glue, water, white vinegar, molasses, and oxgall, and sometimes a small amount of fungicide.
 
     -   For moisture-sensitive paintings, a synthetic adhesive or mastic resin can be substituted for this step.
 
 3.  The lining canvas is soaked in water for at least twelve hours and then left to dry before being stretched onto a wood or metal working frame.
 
-4.  A thin layer of *colla di pasta* or *colla pasta* (glue paste) is spread onto the back of the painting. The lining canvas is placed on the back of the painting and massaged from the reverse, pushing from the center outward to remove excess glue. This process is sometimes repeated from the front of the painting until only a thin layer of glue remains.
+4.  A thin layer of *colla di pasta*, or *colla pasta* (glue paste), is spread onto the back of the painting. The lining canvas is placed on the back of the painting and massaged from the reverse, pushing from the center outward to remove excess glue. This process is sometimes repeated from the front of the painting until only a thin layer of glue remains.
 
     -   The *colla pasta* is often composed of wheat flour, water, undiluted or dry *colletta*, and Venice turpentine. A fungicide and/or alum is also sometimes added.
 
@@ -55,11 +55,11 @@ The following outlines the steps of the Roman lining process.
 
 6.  The painting is left to dry fully for at least a day before removing the facing. After several days, the painting can then be stretched onto its final support.[^7]
 
-The Roman method has several advantages, primarily a lower overall weight after lining, a thin layer of glue, and the flexibility of the open-weave canvases. It does have limitations, however, and would not be suitable for highly damaged or sensitive works. The heat, moisture, and pressure of traditional glue-paste lining processes are also not appropriate for many paintings, and require a very skilled practitioner for proper implementation.
+The Roman method has several advantages, primarily a lower overall weight after lining, a thin layer of glue, and the flexibility of the open-weave canvases. It does have limitations, however, and would not be suitable for highly damaged or sensitive works. The heat, moisture, and pressure of traditional glue-paste lining processes are also not appropriate for many paintings and require a very skilled practitioner for proper implementation.
 
 ## Conclusions
 
-After investigation into the various types of traditional Italian lining canvases, it was determined *Adoration of the Shepherds* was lined with a Roman *tela patta* canvas. The exact techniques and recipes used for its application remain unknown, though Italian scholarship provides an overview of the salient differences between the Florentine and Roman methodologies that may have been employed. Traditional glue-paste linings are now considered inappropriate for many works, yet almost ninety years later this Roman lining remains unobtrusive and flexible. During treatment it was decided to retain the lining due to its excellent state of preservation. There are many favorable aspects of the Roman lining process, and further experimentation using open-weave canvases with alternative adhesives and/or application methods could make this traditional technique less intensive while still providing a light, flexible support.
+After investigation into the various types of traditional Italian lining canvases, it was determined that *Adoration of the Shepherds* was lined with a Roman *tela patta* canvas. The exact techniques and recipes used for its application remain unknown, though Italian scholarship provides an overview of the salient differences between the Florentine and Roman methodologies that may have been employed. Traditional glue-paste linings are now considered inappropriate for many works, yet almost ninety years later this Roman lining remains unobtrusive and flexible. During treatment, it was decided to retain the lining due to its excellent state of preservation. There are many favorable aspects of the Roman lining process, and further experimentation using open-weave canvases with alternative adhesives and/or application methods could make this traditional technique less intensive while still providing a light, flexible support.
 
 ## Acknowledgments
 
@@ -81,6 +81,6 @@ The author would like to thank the following for their guidance and expertise: D
 
 [^5]: This type of canvas can be called *olona* and is typically closer to 30 threads per inch; see {% cite 'Laroche and Saccarello, 1996' '17' %}.
 
-[^6]: See also Reifsnyder’s comments on the flexibility of the recipes she tested, citing the Roman glue-paste as being more rigid after lining ({% cite 'Reifsnyder 1995' '81' %}).
+[^6]: See also Reifsnyder’s comments on the flexibility of the recipes she tested, citing the Roman glue paste as being more rigid after lining ({% cite 'Reifsnyder 1995' '81' %}).
 
-[^7]: This description reflects the practices of the Instituto Centrale de Restauro in Rome from the early 1980s, as described in {% cite 'Laroche and Saccarello 1996' '12–15' %}. See also Forni’s description of nineteenth-century approaches ({% cite 'Forni 1866' '116–20' %}).
+[^7]: This description reflects the practices of the Instituto Centrale de Restauro, in Rome, from the early 1980s, as described in {% cite 'Laroche and Saccarello 1996' '12–15' %}. See also Forni’s description of nineteenth-century approaches ({% cite 'Forni 1866' '116–20' %}).
