--- a/content/8-posters/46.md
+++ b/content/8-posters/46.md
@@ -1,8 +1,8 @@
 ---
 label: "46"
-title: "Historic Canvases Deciphered"
+title: "Historical Canvases Deciphered"
 subtitle: "Five Case Studies"
-short_title: "Historic Canvases Deciphered"
+short_title: "Historical Canvases Deciphered"
 layout: essay
 order: 460
 contributor:
@@ -11,14 +11,14 @@ contributor:
     title:
     affiliation: "Lab O, Odemira, Portugal"
 keywords:
-abstract: "Textiles with a woven pattern were used as painters’ canvases by Spanish and Italian artists in the sixteenth and seventeenth centuries. In this poster, textiles that has have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions. The research and reconstruction of canvases contributes to understanding of technical painting art history and brings attention to an understudied aspect of textile production during the period that an artwork was created. Canvas reconstruction enables new research and may provide insight about why old masters used these supports, as well as how and when these textiles were made."
+abstract: "Textiles with a woven pattern were used as painters’ canvases by Spanish and Italian artists in the sixteenth and seventeenth centuries. In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions. The research and reconstruction of canvases contributes to the understanding of technical painting and art history and brings attention to an understudied aspect of textile production during the period that an artwork was created. Canvas reconstruction enables new research and may provide insight into why old masters used these supports, as well as how and when these textiles were made."
 ---
 
 ## Introduction
 
-Textiles with a woven pattern were used as painters’ canvases by Spanish and Italian artists in the sixteenth and seventeenth centuries. But art historians and painting conservators have focused on the painted layers rather than the underlying fabric.
+Textiles with a woven pattern were used as painters’ canvases by Spanish and Italian artists in the sixteenth and seventeenth centuries. But art historians and paintings conservators have focused on the painted layers rather than on the underlying fabric.
 
-In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions of the support canvas of five paintings by El Greco ([fig. 46.1](#fig-46-1-a)), Titian ([fig. 46.2](#fig-46-2-a)), Caravaggio ([fig. 46.3](#fig-46-3-a)), and Velázquez ([fig. 46.4](#fig-46-4-a)), ([fig. 46.5](#fig-46-5-a)). The support canvas used by the great masters is shown in each of the figures.
+In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions of the support canvas of five paintings by El Greco ([fig. 46.1](#fig-46-1-a)), Titian ([fig. 46.2](#fig-46-2-a)), Caravaggio ([fig. 46.3](#fig-46-3-a)), and Velázquez ([figs. 46.4](#fig-46-4-a), [46.5](#fig-46-5-a). The support canvas used by the great masters is shown in each of the figures.
 
 ### El Greco
 
@@ -50,6 +50,6 @@ All reconstructions were then woven in linen on a dobby loom.
 
 ## The Project Goal
 
-Lab O, a laboratory for handwoven canvas located in Odemira, Portugal, was founded to deepen the technical and practical knowledge of historic canvases and to promote their analysis, authentication, and conservation. The work at Lab O connects craft, entrepreneurship, technology, science, and art history.
+Lab O, a laboratory for handwoven canvas located in Odemira, Portugal, was founded to deepen the technical and practical knowledge of historical canvases and to promote their analysis, authentication, and conservation. The work at Lab O connects craft, entrepreneurship, technology, science, and art history.
 
-The research and reconstruction of canvases contributes to the understanding of technical painting art history and brings attention to an understudied aspect of textile production during the period that an artwork was created. Canvas reconstruction enables new research and may provide insight about why old masters used these supports, as well as how and when these textiles were made.
+The research and reconstruction of canvases contributes to the understanding of technical painting and art history and brings attention to an understudied aspect of textile production during the period that an artwork was created. Canvas reconstruction enables new research and may provide insight into why old masters used these supports, as well as how and when these textiles were made.
